fixed letter-spacing for lead__caption

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
-  letter-spacing: 2.4px;
+  letter-spacing: 1.5px;
   margin: 8px 0 0 0;
   text-transform: uppercase;
 }
